Revert change to GValueManager.